--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "allure-playwright": "^3.2.1"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.7.0"
+    "@faker-js/faker": "^9.7.0",
+    "allure": "^3.0.0-beta.10"
   }
 }
