--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -81,6 +81,6 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.TOKEN_ALLURE }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./allure-report
